fix(cors): use allowedOriginPatterns, sanitize ALLOWED_ORIGINS, OPTIONS permitAll first
Made-with: Cursor